@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Partial fix for #1772759: Too much alchemy causes client crash.
+ common/object.c: correctly send/remove object when in container the player is
+  looking into.
+Nicolas Weeger 2007-08-12
+
 Fix plugin documentation, add some .ps version made from the wiki.
 This fixes bug #1537236: cfpython 2.0 - documentation missing.
  doc/plugins
